# webapp-github-actions

./: Dockerfile  main.py  pyproject.toml  task-definition.json
.github/workflows/: aws.yml
