[tool.poetry]
name = "web-apps"
version = "0.1.0"
description = ""
authors = ["Remy <heo.hoon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^0.87.0"
matplotlib = "^3.4.3"
audioread = "^2.1.9"
SoundFile = "^0.10.3"
Pyrebase = "^3.0.27"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
